# simple-icons-website-rs

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .stylelintrc.json  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  USAGE.md  deprecations.html  fast-fuzzy.js  index.html  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  simple-icons-website-33750f12824daaae.js  simple-icons-website-3f82880105436c5f.js  simple-icons-website-3f82880105436c5f_bg.wasm  simple-icons-website-777b0ca5883613df.js  simple-icons-website-777b0ca5883613df_bg.wasm  simple-icons-website-a51612fe33912bb4.js  simple-icons-website-d5d675c076994a31.js  simple-icons-website-d5d675c076994a31_bg.wasm  simple-icons-website-d9022bef4b8b572a.js  simple-icons-website-d9022bef4b8b572a_bg.wasm  simple-icons-website-f606e1995d123e60.js  simple-icons-website-f606e1995d123e60_bg.wasm  sitemap.xml  stylesheet-13d3e8aab0737bba.css  stylesheet-371da7ffa8af59d.css  stylesheet-4259887ba17a0e83.css  stylesheet-b91961e8efda3298.css  (+4 more)
app/: .stylelintrc.json  CNAME  Cargo.toml  Trunk.prod.toml  Trunk.toml  index.html  index.template.html  playwright.config.ts  postcss.config.js  preview.html  stylesheet.css  tailwind.config.js  tailwind.config.ts
app/assets/: stylesheet.css
app/i18n/: Cargo.toml
app/i18n/src/: lib.rs
app/locales/: languages.json
app/locales/de-CH/: main.ftl
app/locales/en-US/: main.ftl
app/locales/es-ES/: main.ftl
app/locales/fr-FR/: main.ftl
app/locales/it-IT/: main.ftl
app/locales/ja-JP/: main.ftl
app/locales/ko-KR/: main.ftl
app/locales/pt-PT/: main.ftl
app/locales/ru-RU/: main.ftl
app/locales/uk-UA/: main.ftl
app/locales/zh-CN/: main.ftl
app/locales/zh-HK/: main.ftl
app/locales/zh-TW/: main.ftl
app/pages/404/: Cargo.toml
app/pages/deprecations/: Cargo.toml
app/pages/layout/: Cargo.toml
app/pages/preview/: Cargo.toml
app/public/: 404.html  deprecations.html  preview.html
app/public/assets/: fonts.css  opensearch.xml
app/public/deprecations/: index.html
app/public/preview/: index.html
app/src/: app.rs  head.rs  lib.rs  main.rs  meta.rs  page.rs  pages.rs
app/tests/: app.spec.ts  constants.ts  header.spec.ts
components/: Cargo.toml
components/controls/: Cargo.toml
components/controls/layout-signal/: Cargo.toml
components/controls/layout-type/: Cargo.toml
components/controls/layout-types/: Cargo.toml
components/controls/order-types/: Cargo.toml
components/controls/search/: Cargo.toml
components/controls/src/: button.css  button.rs  color_scheme.rs  layout.rs  lib.css  lib.rs  order.rs
components/copy/: Cargo.toml
components/copy/src/: lib.css  lib.rs
components/footer/: Cargo.toml
components/footer/src/: lib.css  lib.rs
components/grid/: Cargo.toml
components/grid/constants/: Cargo.toml
components/grid/icons-loader/: Cargo.toml
components/grid/src/: ad.rs  lib.css  lib.rs  scroll.css  scroll.rs
components/grid/types/: Cargo.toml
components/header/: Cargo.toml
components/header/src/: lib.css  lib.rs  title.css  title.rs
components/ids/: Cargo.toml
components/ids/src/: lib.rs
components/menu/: Cargo.toml
components/menu/src/: lib.rs
components/modal/: Cargo.toml
components/modal/src/: lib.css  lib.rs
components/preview-generator/: Cargo.toml
components/preview-generator/src/: buttons.rs  canvas.rs  deps.js  deps.rs  helpers.rs  inputs.rs  keyboard.rs  lib.css  lib.rs
components/search/: Cargo.toml
components/search/src/: lib.rs
components/src/: button.css  button.rs  copy.css  copy.js  copy.rs  event.rs  experiments.rs  fetch.rs  footer.css  footer.rs  header.rs  ids.rs  keyboard.rs  lib.css  lib.rs  menu.rs  mod.css  modal.css  modal.rs  preview.css  preview.rs  preview_generator.css  preview_generator.rs  scroll.css  scroll.rs  spinners.rs  storage.rs  svg.rs  svg_def.rs  svg_defs.rs  svg_icon.rs  url.rs
components/src/controls/: button.css  button.rs  color_scheme.rs  layout.rs  mod.css  mod.rs  order.rs  search.rs
components/src/copy/: mod.css  mod.rs
components/src/footer/: about.css  about.rs  mod.css  mod.rs
components/src/grid/: ad.rs  icon.rs  icons_loader.css  icons_loader.rs  mod.css  mod.rs  more_icons.css  more_icons.rs  scroll.css  scroll.rs
components/src/header/: menu.rs  mod.css  mod.rs  title.css  title.rs
components/src/js_libs/: svg-path-bbox.js  svg.js  svg.rs  svg_bridge.js
components/src/preview_generator/: buttons.rs  canvas.rs  inputs.rs  mod.css  mod.rs
components/storage/: Cargo.toml
components/storage/src/: lib.rs
components/svg-defs/: Cargo.toml
components/svg-defs/src/: lib.rs
components/svg-icon/: Cargo.toml
components/svg-icon/src/: lib.rs
components/url/: Cargo.toml
components/url/src/: lib.rs
i18n/: Cargo.toml  build.rs  languages.json  messages.pot
i18n/locales/: es.po  fr.po  it.po  ja-JP.po  pt.po  zh-CN.po  zh-HK.po  zh-TW.po
i18n/locales/en-US/: main.ftl
i18n/locales/es-ES/: main.ftl
i18n/locales/fr-FR/: main.ftl
i18n/locales/it-IT/: main.ftl
i18n/locales/ja-JP/: main.ftl
i18n/locales/ko-KR/: main.ftl
i18n/locales/pt-PT/: main.ftl
i18n/locales/uk-UA/: main.ftl
i18n/locales/zh-CN/: main.ftl
i18n/locales/zh-HK/: main.ftl
i18n/locales/zh-TW/: main.ftl
i18n/src/: lib.rs
libs/simple-icons/: Cargo.toml
libs/simple-icons-macros/: Cargo.toml
libs/simple-icons/src/: lib.rs  (+2 more)
libs/web-sys-simple-copy/: Cargo.toml
libs/web-sys-simple-fetch/: Cargo.toml
macros/: Cargo.toml
macros/src/: color.rs  color_sorting.rs  lib.rs  svg_path.rs
scripts/: Cargo.toml  comment-lines.ts  create-cname.ts  create-sitemap.ts  create-stats.ts  fetch-deprecated-icons.ts  helpers.ts  minify-css.ts  minify-wasm-js-binding.ts
scripts/src/: bump-simple-icons.rs  create-cname.rs  create-sitemap.rs  fetch-deprecated-icons.rs
simple-icons/: Cargo.toml
simple-icons/src/: color.rs  data.rs  deprecated.rs  lib.rs  svg_path.rs
tests/end2end/: Cargo.toml
tests/end2end-helpers/: Cargo.toml
tests/end2end-steps/: Cargo.toml
(+233 files in other folders)
