[workspace]
members = [
    "app",
    "components",
    "components/preview-generator",
    "components/menu",
    "components/footer",
    "components/ids",
    "components/storage",
    "components/svg-defs",
    "components/svg-icon",
    "components/url",
    "libs/svg-path-bbox",
    "libs/web-sys-simple-copy",
    "libs/web-sys-simple-events",
    "libs/web-sys-simple-fetch",
    "macros",
    "simple-icons",
    "types"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
simple-icons = { path = "./simple-icons" }
simple-icons-website-macros = { path = "./macros" }
simple-icons-website-types = { path = "./types" }
simple-icons-website-components = { path = "./components" }
simple-icons-website-preview-generator = { path = "./components/preview-generator" }
simple-icons-website-footer = { path = "./components/footer" }
simple-icons-website-menu = { path = "./components/menu" }
simple-icons-website-ids = { path = "./components/ids" }
simple-icons-website-storage = { path = "./components/storage" }
simple-icons-website-svg-defs = { path = "./components/svg-defs" }
simple-icons-website-svg-icon = { path = "./components/svg-icon" }
simple-icons-website-url = { path = "./components/url" }
svg-path-bbox = { path = "./libs/svg-path-bbox" }
web-sys-simple-copy = { path = "./libs/web-sys-simple-copy" }
web-sys-simple-events = { path = "./libs/web-sys-simple-events" }
web-sys-simple-fetch = { path = "./libs/web-sys-simple-fetch" }
leptos = { version = "0.7", default-features = false, features = [
    "csr",
    "nightly",
] }
leptos_meta = "0.7"
leptos_router = "0.7"
leptos-use = "0.15"
leptos-fluent = { version = "0.2", features = ["nightly"] }
fluent-templates = "0.13"
# TODO: release leptos-hotkeys v0.3
leptos_hotkeys = { git = "https://github.com/gaucho-labs/leptos-hotkeys.git", branch = "leptos-0.7" }
leptos_icons = "0.5"
icondata = { version = "0.5", default-features = false, features = [
    "simple-icons",
    "charm",
    "tabler-icons",
    "lucide",
    "remix-icon",
    "ionicons",
    "font-awesome",
    "box-icons",
    "bootstrap-icons",
    "vs-code-icons",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", default-features = false, features = [
    "Blob",
    "DomTokenList",
    "CanvasRenderingContext2d",
    "Clipboard",
    "Element",
    "Event",
    "EventInit",
    "EventTarget",
    "File",
    "FileList",
    "History",
    "HtmlDocument",
    "HtmlCollection",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "Location",
    "MediaQueryList",
    "Navigator",
    "OffscreenCanvasRenderingContext2d",
    "Storage",
    "Request",
    "RequestInit",
    "RequestCache",
    "Url",
    "UrlSearchParams",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
lazy_static = "1.4"
syn = "2"
colorsys = "0.6"
serde_json = "1"
nanoserde = "0.1"
svg-path-cst = "0.1"
unicode-normalization = "0.1"
icu_collator = "1"
config = { version = "0.14", features = ["json"] }
snafu = { version = "0.8", default-features = false }
rand = "0.8"
