[workspace]
members = [
	# App
	"app",
	"app/i18n",

	# Components
	"components/header",
	"components/footer",
	"components/controls",
	"components/controls/layout-type",
	"components/controls/layout-signal",
	"components/controls/order-types",
	"components/controls/search",
	"components/grid",
	"components/grid/types",
	"components/grid/constants",
	"components/menu",
	"components/ids",
	"components/modal",
	"components/copy",
	"components/storage",
	"components/svg-defs",
	"components/svg-icon",
	"components/url",
	"components/preview-generator",

	# Libraries
	"libs/simple-icons",
	"libs/simple-icons-macros",
	"libs/simple-icons-sdk",
	"libs/badge-maker",
	"libs/fast-fuzzy",
	"libs/svg-path-bbox",
	"libs/types",
	"libs/web-sys-simple-copy",
	"libs/web-sys-simple-events",
	"libs/web-sys-simple-fetch",

	# Tests
	"tests",
	"tests/end2end",
	"tests/end2end-helpers",
	"tests/end2end-steps",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.dylint]
libraries = [
	{ git = "https://github.com/leptos-rs/leptos-lints", tag = "v0.1.0" },
	{ git = "https://github.com/mondeja/leptos-unique-ids", tag = "v0.1.0", pattern = "lints" },
	{ git = "https://github.com/mondeja/rs-apps-lints", tag = "v0.1.1", pattern = "lints/*" },
]

[workspace.lints.clippy]
print_stdout = "deny"

[workspace.lints.rust]
warnings = "warn"
# Configuration for leptos-lints
#   Allowance of unknown lints must go after unknown lints in the
#   command passed by cargo to rustc or a warning would be triggered
#   for web_sys_* lints just because the name start with "w".
#   This is how cargo currently works. It doesn't knows anything
#   about what are unknown lints, so there is no logic shared between
#   them and the `unknown_lints` lint.
unknown_lints = { level = "allow", priority = -1 }
leptos_print_stdout = "deny"
# Configuration for leptos-unique-ids lints
literal_as_id_attribute_value = "deny"
tt_as_id_attribute_value = "deny"
# Configuration for rs-apps-lints
#   web-sys
web_sys_reexports = "deny"
#   leptos
leptos_reexports = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.dependencies]
simple-icons = { path = "./libs/simple-icons" }
simple-icons-sdk = { path = "./libs/simple-icons-sdk" }
simple-icons-macros = { path = "./libs/simple-icons-macros" }
simple-icons-website-i18n = { path = "./app/i18n" }
simple-icons-website-types = { path = "./libs/types" }
simple-icons-website-preview-generator = { path = "./components/preview-generator" }
simple-icons-website-footer = { path = "./components/footer" }
simple-icons-website-header = { path = "./components/header" }
simple-icons-website-controls = { path = "./components/controls" }
simple-icons-website-controls-layout-type = { path = "./components/controls/layout-type" }
simple-icons-website-controls-layout-signal = { path = "./components/controls/layout-signal" }
simple-icons-website-controls-order-types = { path = "./components/controls/order-types" }
simple-icons-website-controls-search = { path = "./components/controls/search" }
simple-icons-website-grid = { path = "./components/grid" }
simple-icons-website-grid-types = { path = "./components/grid/types" }
simple-icons-website-grid-constants = { path = "./components/grid/constants" }
simple-icons-website-grid-icons-loader = { path = "./components/grid/icons-loader" }
simple-icons-website-menu = { path = "./components/menu" }
simple-icons-website-ids = { path = "./components/ids" }
simple-icons-website-copy = { path = "./components/copy" }
simple-icons-website-modal = { path = "./components/modal" }
simple-icons-website-storage = { path = "./components/storage" }
simple-icons-website-svg-defs = { path = "./components/svg-defs" }
simple-icons-website-svg-icon = { path = "./components/svg-icon" }
simple-icons-website-url = { path = "./components/url" }
end2end-helpers = { path = "./tests/end2end-helpers" }
end2end-steps = { path = "./tests/end2end-steps" }
svg-path-bbox = { path = "./libs/svg-path-bbox" }
badge-maker = { path = "./libs/badge-maker" }
fast-fuzzy = { path = "./libs/fast-fuzzy" }
web-sys-simple-copy = { path = "./libs/web-sys-simple-copy" }
web-sys-simple-events = { path = "./libs/web-sys-simple-events" }
web-sys-simple-fetch = { path = "./libs/web-sys-simple-fetch" }
leptos = { version = "0.8", default-features = false, features = [
	"csr",
	"nightly",
] }
leptos_meta = "0.8"
leptos_router = "0.8"
leptos-use = "0.16.0-beta"
leptos-fluent = { version = "0.2", features = ["nightly"] }
leptos_icons = "0.6"
icondata = { version = "0.6", default-features = false, features = [
	"charm",
	"tabler-icons",
	"lucide",
	"remix-icon",
	"ionicons",
	"font-awesome",
	"box-icons",
	"bootstrap-icons",
	"vs-code-icons",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", default-features = false, features = [
	"Blob",
	"DomTokenList",
	"CanvasRenderingContext2d",
	"Clipboard",
	"Element",
	"Event",
	"EventInit",
	"EventTarget",
	"File",
	"FileList",
	"History",
	"HtmlDocument",
	"HtmlCollection",
	"HtmlElement",
	"HtmlButtonElement",
	"HtmlImageElement",
	"HtmlInputElement",
	"Location",
	"MediaQueryList",
	"Navigator",
	"OffscreenCanvasRenderingContext2d",
	"Storage",
	"Request",
	"RequestInit",
	"RequestCache",
	"Url",
	"UrlSearchParams",
	"Selection",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
syn = "2"
colorsys = "0.6"
serde_json = "1"
nanoserde = { version = "0.2", default-features = false, features = [
	"std",
	"json",
] }
svg-path-cst = "0.1"
unicode-normalization = "0.1"
snafu = { version = "0.8", default-features = false }
cucumber = "0.21"
thirtyfour = "0.35"
anyhow = "1"
cucumber-thirtyfour-worlder = "0.2"
tokio = { version = "1.45", default-features = false, features = [
	"macros",
	"rt-multi-thread",
] }
leptos-unique-ids = "0.1.0"
