[package]
name = "simple-icons-website"
description = "Simple Icons website main entrypoint"
version.workspace = true
edition.workspace = true

[dependencies]
simple-icons-website-components.workspace = true
simple-icons-website-macros.workspace = true
simple-icons-website-i18n.workspace = true
simple-icons-website-config.workspace = true
simple-icons-website-types.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
console_log.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
serde_json.workspace = true
leptos-use.workspace = true
