[package]
name = "simple-icons-website"
description = "Simple Icons website main entrypoint"
version.workspace = true
edition.workspace = true

[dependencies]
simple-icons-website-components.workspace = true
simple-icons-website-macros.workspace = true
simple-icons-website-preview-generator.workspace = true
simple-icons-website-footer.workspace = true
simple-icons-website-storage.workspace = true
simple-icons-website-svg-defs.workspace = true
simple-icons-website-url.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-fluent.workspace = true
leptos_icons.workspace = true
leptos_hotkeys.workspace = true
icondata.workspace = true
fluent-templates.workspace = true
console_error_panic_hook.workspace = true
serde_json.workspace = true
leptos-use.workspace = true
