[package]
name = "simple-icons-website-components"
description = "Simple Icons website components"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "components"

[dependencies]
simple-icons.workspace = true
simple-icons-website-macros.workspace = true
simple-icons-website-i18n.workspace = true
simple-icons-website-config.workspace = true
simple-icons-website-types.workspace = true
leptos.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
log.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
svg-path-cst.workspace = true
rand.workspace = true
