[package]
name = "simple-icons-website-components"
description = "Simple Icons website components"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "components"

[dependencies]
simple-icons-website-macros.workspace = true
simple-icons-website-config.workspace = true
simple-icons-website-types.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos-fluent.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
rand.workspace = true
