[package]
name = "simple-icons-website-components"
description = "Simple Icons website components"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-icons-website-macros.workspace = true
simple-icons-website-types.workspace = true
simple-icons-website-menu.workspace = true
simple-icons-website-ids.workspace = true
simple-icons-website-storage.workspace = true
simple-icons-website-svg-defs.workspace = true
simple-icons-website-svg-icon.workspace = true
simple-icons-website-url.workspace = true
web-sys-simple-events.workspace = true
web-sys-simple-fetch.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos-fluent.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
rand.workspace = true
