[package]
name = "simple-icons-website-i18n"
version = { workspace = true }
edition = "2018"
description = "Localization of Simple Icons"

[lib]
path = "src/lib.rs"
name = "i18n"

[dependencies]
leptos.workspace = true
lazy_static.workspace = true
web-sys = { workspace = true, features = ["Navigator", "Storage"] }
rspolib.workspace = true

[build-dependencies]
rspolib.workspace = true
