[package]
name = "simple-icons-website-i18n"
description = "Localization of Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
name = "i18n"

[dependencies]
leptos.workspace = true
lazy_static.workspace = true
fluent-templates.workspace = true
unic-langid.workspace = true

[build-dependencies]
serde_json.workspace = true
