[package]
name = "simple-icons-website-macros"
version = { workspace = true }
edition = "2018"
description = "Simple Icons website macros"

[lib]
proc-macro = true
name = "macros"
path = "src/lib.rs"

[dependencies]
syn = "2"
simple-icons = { path = "../simple-icons" }
simple-icons-website-config = { path = "../config" }
