[package]
name = "simple-icons-website-macros"
description = "Simple Icons website macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true
name = "macros"
path = "src/lib.rs"

[dependencies]
syn.workspace = true
simple-icons.workspace = true
simple-icons-website-config.workspace = true
colorsys.workspace = true
