[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-deprecated-icons"
path = "src/fetch-deprecated-icons.rs"

[dependencies]
simple-icons-website-config.workspace = true
dotenv.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
