[package]
name = "scripts"
description = "Simple Icons website scripts"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fetch-deprecated-icons"
path = "src/fetch-deprecated-icons.rs"

[[bin]]
name = "bump-simple-icons"
path = "src/bump-simple-icons.rs"

[dependencies]
simple-icons-website-config.workspace = true
dotenv.workspace = true
reqwest.workspace = true
serde_json.workspace = true
