[package]
name = "scripts"
description = "Simple Icons website scripts"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fetch-deprecated-icons"
path = "src/fetch-deprecated-icons.rs"

[[bin]]
name = "bump-simple-icons"
path = "src/bump-simple-icons.rs"

[[bin]]
name = "create-sitemap"
path = "src/create-sitemap.rs"

[[bin]]
name = "create-cname"
path = "src/create-cname.rs"

[dependencies]
simple-icons-website-config.workspace = true
dotenv.workspace = true
reqwest.workspace = true
serde_json.workspace = true
chrono.workspace = true
