[package]
name = "simple-icons"
description = "Binding between simple-icons npm library and Rust"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nanoserde.workspace = true
unicode-normalization.workspace = true
serde_json.workspace = true
colorsys.workspace = true
svg-path-cst.workspace = true
snafu.workspace = true
