[package]
name = "simple-icons-website-footer"
description = "Footer component for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos-fluent.workspace = true
simple-icons-macros.workspace = true
simple-icons-website-svg-icon.workspace = true
