[package]
name = "simple-icons-website-grid"
description = "Grid component for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
leptos_meta.workspace = true
icondata.workspace = true
leptos-fluent.workspace = true
wasm-bindgen.workspace = true
leptos-use.workspace = true
web-sys.workspace = true
js-sys.workspace = true
simple-icons-website-types.workspace = true
simple-icons-website-modal.workspace = true
simple-icons-website-controls.workspace = true
simple-icons-website-controls-search.workspace = true
simple-icons-website-copy.workspace = true
simple-icons-website-url.workspace = true
simple-icons-website-ids.workspace = true
simple-icons-website-svg-icon.workspace = true
simple-icons-website-svg-defs.workspace = true
simple-icons-website-menu.workspace = true
simple-icons-website-grid-types.workspace = true
simple-icons-website-grid-icons-loader.workspace = true
simple-icons-website-controls-layout-type.workspace = true
simple-icons-website-controls-layout-signal.workspace = true
simple-icons-website-controls-order-types.workspace = true
web-sys-simple-fetch.workspace = true

[lints]
workspace = true
