[package]
name = "simple-icons-website-header"
description = "Header component for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
leptos-fluent.workspace = true
simple-icons-website-types.workspace = true
simple-icons-website-svg-icon.workspace = true
simple-icons-website-modal.workspace = true
simple-icons-macros.workspace = true
