[package]
name = "simple-icons-website-ids"
description = "Unique identifiers for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos-unique-ids.workspace = true
leptos.workspace = true

[package.metadata.cargo-machete]
ignored = ["leptos"]

[lints]
workspace = true
