[package]
name = "simple-icons-website-menu"
description = "Menu component for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "simple_icons_website_menu"

[dependencies]
leptos.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
