[package]
name = "simple-icons-website-modal"
description = "Modal component for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-icons-website-copy.workspace = true
simple-icons-website-controls-search.workspace = true
simple-icons-website-svg-defs.workspace = true
simple-icons-website-svg-icon.workspace = true
simple-icons-website-url.workspace = true
leptos.workspace = true
leptos-fluent.workspace = true
leptos-use.workspace = true
web-sys.workspace = true
