[package]
name = "simple-icons-website-preview-generator"
description = "Simple Icons website preview generator component"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-icons.workspace = true
simple-icons-website-components.workspace = true
simple-icons-website-macros.workspace = true
simple-icons-website-types.workspace = true
simple-icons-website-ids.workspace = true
simple-icons-website-svg-defs.workspace = true
simple-icons-website-svg-icon.workspace = true
simple-icons-website-url.workspace = true
svg-path-bbox.workspace = true
web-sys-simple-events.workspace = true
web-sys-simple-fetch.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos-fluent.workspace = true
leptos_hotkeys.workspace = true
web-sys.workspace = true
js-sys.workspace = true
icondata.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
svg-path-cst.workspace = true
lazy_static.workspace = true
