[package]
name = "simple-icons-macros"
description = "Simple Icons website macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
simple-icons.workspace = true
simple-icons-website-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
