[package]
name = "end2end-helpers"
description = "Helpers for end-to-end tests of the Simple Icons website"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cucumber.workspace = true
thirtyfour.workspace = true
serde_json.workspace = true
cucumber-thirtyfour-worlder.workspace = true
async-trait = "0.1"

[lints]
workspace = true
