[package]
name = "end2end-steps"
description = "Gherkin steps for end-to-end tests of the Simple Icons website"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
end2end-helpers.workspace = true
cucumber.workspace = true
thirtyfour.workspace = true
anyhow = "1"
simple-icons-website-controls-layout-type.workspace = true
serde_json.workspace = true
