[package]
name = "simple-icons-website-404-page"
description = "Simple Icons website /404 page entrypoint"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
simple-icons-website-page-layout.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
simple-icons-website-controls.workspace = true
leptos-fluent.workspace = true
icondata.workspace = true
leptos_icons.workspace = true
