[package]
name = "simple-icons-website-preview-page"
description = "Simple Icons website /preview page entrypoint"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
simple-icons-website-page-layout.workspace = true
simple-icons-website-grid-constants.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
simple-icons-website-preview-generator.workspace = true
simple-icons-website-controls.workspace = true
leptos-fluent.workspace = true
icondata.workspace = true
leptos_icons.workspace = true
