[package]
name = "simple-icons-website-controls-layout-signal"
description = "Signal for layout control for the Simple Icons website"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
simple-icons-website-controls-layout-type.workspace = true

[lints]
workspace = true
